[workspace]
resolver = "2"
members = ["crates/ebpf", "crates/nat-xdp"]

[workspace.dependencies]
anyhow = "1.0"
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
clap = { version = "4.5", features = ["derive"] }
network-types = "0.0.7"
tokio = { version = "1.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
which = { version = "6.0.0", default-features = false }
